--- a/po4a.cfg
+++ b/po4a.cfg
@@ -25,6 +25,7 @@
 
 [type: latex] sections/back_cover.tex $lang:sections/translated/$lang/back_cover.tex
 [type: latex] sections/credits.tex $lang:sections/translated/$lang/credits.tex
+[type: latex] sections/feedback_page.tex $lang:sections/translated/$lang/feedback_page.tex
 [type: latex] sections/notes.tex $lang:sections/translated/$lang/notes.tex
 [type: latex] sections/random_scenario.tex $lang:sections/translated/$lang/random_scenario.tex
 [type: latex] sections/recommendations.tex $lang:sections/translated/$lang/recommendations.tex
