Shorten scenario list

--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -258,7 +258,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scenario_type: ["draft-scenarios/clash", "draft-scenarios/campaigns", "draft-scenarios/sections"]
+        # scenario_type: ["draft-scenarios/clash", "draft-scenarios/campaigns", "draft-scenarios/sections"]
+        scenario_type: ["draft-scenarios/campaigns"]
         language: ["en"]
     with:
       scenario_type: ${{ matrix.scenario_type }}
