--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -90,7 +90,7 @@ jobs:
 
   find_draft_map_files:
     runs-on: ubuntu-latest
-    # if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request'
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
@@ -224,42 +224,41 @@ jobs:
           path: draft-scenarios/drafts-mono.pdf
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  # publish:
-  #   runs-on: ubuntu-latest
-  #   needs: [build, build_draft_monochrome]
-  #   steps:
-  #     - name: Create dir
-  #       run: mkdir drafts
-  #
-  #     - name: Download regular draft PDF
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         pattern: drafts*
-  #         path: drafts
-  #         merge-multiple: true
-  #
-  #     - name: Publish drafts in artifacts repository
-  #       uses: peaceiris/actions-gh-pages@v4
-  #       if: github.event_name != 'pull_request'
-  #       with:
-  #         deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
-  #         external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
-  #         publish_branch: drafts
-  #         publish_dir: ./drafts
-  #         force_orphan: true
-  #
-  #     - uses: geekyeggo/delete-artifact@v5
-  #       with:
-  #         name: monochrome-map-*
+  publish:
+    runs-on: ubuntu-latest
+    needs: [build, build_draft_monochrome]
+    steps:
+      - name: Create dir
+        run: mkdir drafts
+
+      - name: Download regular draft PDF
+        uses: actions/download-artifact@v4
+        with:
+          pattern: drafts*
+          path: drafts
+          merge-multiple: true
+
+      - name: Publish drafts in artifacts repository
+        uses: peaceiris/actions-gh-pages@v4
+        if: github.event_name != 'pull_request'
+        with:
+          deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
+          external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
+          publish_branch: drafts
+          publish_dir: ./drafts
+          force_orphan: true
+
+      - uses: geekyeggo/delete-artifact@v5
+        with:
+          name: monochrome-map-*
 
   call_build:
-    # needs: publish
+    needs: publish
     uses: ./.github/workflows/build-individual-scenarios.yaml
     strategy:
       fail-fast: false
       matrix:
-        # scenario_type: ["draft-scenarios/clash", "draft-scenarios/campaigns", "draft-scenarios/sections"]
-        scenario_type: ["draft-scenarios/campaigns"]
+        scenario_type: ["draft-scenarios/clash", "draft-scenarios/campaigns", "draft-scenarios/sections"]
         language: ["en"]
     with:
       scenario_type: ${{ matrix.scenario_type }}
