Make intro translatable

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -38,4 +38,5 @@
           --wrap-po=newlines \
           --keep 0 \
           --option verbatim=tikzpicture,multicols*,figure*,multicols,table* \
+          --option exclude_include=.version \
           -v
