--- a/po4a.cfg
+++ b/po4a.cfg
@@ -2,6 +2,7 @@
 [po4a_paths] translations/$master/$master.pot $lang:translations/$master/$lang.po
 
 [type: latex] sections/title_page.tex $lang:sections/translated/$lang/title_page.tex
+[type: latex] sections/language_metadata.tex $lang:sections/translated/$lang/language_metadata.tex
 
 [type: latex] coops/sentinels.tex $lang:coops/translated/$lang/sentinels.tex
 [type: latex] coops/titans_stronghold.tex $lang:coops/translated/$lang/titans_stronghold.tex
