--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -135,9 +135,9 @@ jobs:
         id: test
         if: github.event_name == 'pull_request' && steps.cache-pdf.outputs.cache-hit != 'true'
         run: |
-          NEEDLE="$(grep TEST_SUBSTRING= main_${{ inputs.language }}.tex | cut -f2 -d=)"
+          NEEDLE="$(grep TEST_SUBSTRING= main_${{ matrix.language }}.tex | cut -f2 -d=)"
           if [[ -z "$NEEDLE" ]]; then
-            echo "No TEST_SUBSTRING found in main_${{ inputs.language }}.tex."
+            echo "No TEST_SUBSTRING found in main_${{ matrix.language }}.tex."
             exit 1
           fi
           echo "NEEDLE=$NEEDLE" >> $GITHUB_OUTPUT
