--- a/tools/container/Dockerfile
+++ b/tools/container/Dockerfile
@@ -89,6 +89,7 @@ RUN <<EOF
     collection-pictures \
     enumitem \
     etexcmds \
+    fontsetup \
     footmisc \
     fullwidth \
     imakeidx \
