--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,7 +6,7 @@
 /coops/ @Re4XN @tomaas-zeman @qwrtln @tyson-heckert
 /templates/ @tomaas-zeman @qwrtln @tyson-heckert
 /sections/ @qwrtln
-/draft-scenarios/ @qwrtln @Laamakala
+/draft-scenarios/ @qwrtln @Laamakala @xNeuroNx
 README.md @qwrtln
 main_en.tex @qwrtln @tomaas-zeman @tyson-heckert
 metadata.tex @qwrtln
