--- a/.github/workflows/parse-form-responses.yaml
+++ b/.github/workflows/parse-form-responses.yaml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v5
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Download all responses
         run: curl -L "${{ env.RESPONSES_SPREADSHEET }}/export?format=csv" > "${{ env.RESPONSES_FILENAME }}"
@@ -28,14 +30,16 @@ jobs:
       - uses: actions/setup-python@v6
         with:
           python-version: "3.14"
+          cache: "pip"
+
+      - run: pip install requests
 
       - name: Parse responses
         run: |
           python .github/scripts/parse-responses.py "${{ env.RESPONSES_FILENAME }}" "${{ env.EXISTING_RESPONSES_FILENAME }}"
         continue-on-error: true
 
-      - name: Move responses
-        run: |
+      - run: |
           mkdir responses
           mv ${{ env.EXISTING_RESPONSES_FILENAME }} responses/
 
