--- a/.github/workflows/po4a-check.yaml
+++ b/.github/workflows/po4a-check.yaml
@@ -4,48 +4,40 @@ on:
   pull_request:
     branches: [main]
 
-env:
-  RESPONSES_SPREADSHEET: "https://docs.google.com/spreadsheets/d/1wauJGLiLdpXoWb-dFKKNL_74KpaWJh5eNfhGVTtdb1M"
-  RESPONSES_FILENAME: "responses.csv"
-  EXISTING_RESPONSES_FILENAME: "existing.csv"
-  GIT_BRANCH: "form-responses"
-  DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-
 jobs:
-  parse:
+  check_po4a:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v5
+      - name: Set up repository
+        uses: actions/checkout@v4
+
+      - name: Run po4a
+        uses: qwrtln/po4a-action@v1.3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          version: "0.74"
+          config: "po4a.cfg"
+          args: "--no-translations"
 
-      - name: Download all responses
-        run: curl -L "${{ env.RESPONSES_SPREADSHEET }}/export?format=csv" > "${{ env.RESPONSES_FILENAME }}"
-
-      - name: Download existing responses
-        run: curl -o ${{ env.EXISTING_RESPONSES_FILENAME }} https://raw.githubusercontent.com/qwrtln/Homm3BG-mission-book-build-artifacts/${{ env.GIT_BRANCH }}/${{ env.EXISTING_RESPONSES_FILENAME }}
-
-      - uses: actions/setup-python@v6
-        with:
-          python-version: "3.14"
-
-      - run: pip install requests
-
-      - name: Parse responses
+      - name: Check if translations require updating
         run: |
-          python .github/scripts/parse-responses.py "${{ env.RESPONSES_FILENAME }}" "${{ env.EXISTING_RESPONSES_FILENAME }}"
-        continue-on-error: true
+          if [[ `git status --porcelain translations` ]]; then
+            echo "There are uncommited changes to translations:"
+            git status --porcelain translations
+            git diff | tee po4a.patch | git --no-pager diff --color=always
+            echo ""
+            echo "To fix them, you can either:"
+            echo "1. Type \"po4a commit\" comment in your PR. A bot will commit the changes visible above."
+            echo "2. Run po4a locally, and commit the changes."
+            echo "3. Download and apply po4a-patch artifact from this workflow."
+            exit 1
+          fi
 
-      - run: |
-          mkdir responses
-          mv ${{ env.EXISTING_RESPONSES_FILENAME }} responses/
-
-      - name: Save responses in artifacts repository
-        uses: peaceiris/actions-gh-pages@v4
+      - uses: actions/upload-artifact@v4
+        if: always()
         with:
-          deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
-          external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
-          publish_branch: ${{ env.GIT_BRANCH }}
-          publish_dir: ./responses
-          force_orphan: true
+          name: po4a-patch
+          path: po4a.patch
+          retention-days: 1
+          if-no-files-found: ignore
