Run test workflow

--- a/.github/workflows/parse-form-responses.yaml
+++ b/.github/workflows/parse-form-responses.yaml
@@ -1,9 +1,12 @@
 name: Parse Form Responses
 
 on:
-  schedule:
-    - cron: '17 2 * * *'
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+  # schedule:
+  #   - cron: '17 2 * * *'
+  # workflow_dispatch:
 
 
 env:
