Restore workflow state

--- a/.github/workflows/parse-form-responses.yaml
+++ b/.github/workflows/parse-form-responses.yaml
@@ -1,12 +1,9 @@
 name: Parse Form Responses
 
 on:
-  pull_request:
-    branches:
-      - main
-  # schedule:
-  #   - cron: '17 2 * * *'
-  # workflow_dispatch:
+  schedule:
+    - cron: '17 2 * * *'
+  workflow_dispatch:
 
 
 env:
