Install accsupp.sty
Needed for https://github.com/Heegu-sama/Homm3BG/pull/976

--- a/tools/container/Dockerfile
+++ b/tools/container/Dockerfile
@@ -78,6 +78,7 @@ RUN <<EOF
   tar --strip-components 1 -zxf /tmp/install-tl/install-tl-unx.tar.gz -C /tmp/install-tl/installer
   /tmp/install-tl/installer/install-tl --profile=/texlive.profile
   /opt/texlive/texdir/bin/*/tlmgr install \
+    accsupp \
     adjustbox \
     bigfoot \
     catchfile \
