--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,3 +46,6 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.tabbed:
       alternate_style: true
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
