Fix random scenario layout

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -39,6 +39,6 @@
           --master-language=en_US \
           --wrap-po=newlines \
           --keep 0 \
-          --option verbatim=tikzpicture,multicols*,figure*,multicols,table* \
+          --option verbatim=tikzpicture,multicols*,figure*,multicols,table*,table \
           --option exclude_include=.version \
           -v
